[completed-wishes] Добавил экран с выполненными желаниями

--- a/feature.wishes/src/main/res/values/strings.xml
+++ b/feature.wishes/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
 
 	<string name="edit_screen_edit_wish">Изменить</string>
 	<string name="edit_screen_editing_wish">Редактирование</string>
+	<string name="wish_list_menu_completed">Выполненные</string>
 
 
 </resources>
